major code cleanup, websockets and production server

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 beautifulsoup4==4.9.3
-certifi==2020.11.8
-chardet==3.0.4
+bidict==0.21.2
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+Flask-SocketIO==5.0.1
 idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.2
+Jinja2==2.11.3
 MarkupSafe==1.1.1
-requests==2.25.0
-soupsieve==2.0.1
-urllib3==1.26.2
+python-engineio==4.0.0
+python-socketio==5.0.4
+requests==2.25.1
+soupsieve==2.2
+urllib3==1.26.3
+waitress==1.4.4
 Werkzeug==1.0.1
